<resources>
    <string name="app_name">Social Network Teo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your profile: Barmutov Roman </string>
    <string name="nav_header_subtitle">random@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_information_app">Information</string>
    <string name="friends_fragment_inscription">Select a friend</string>

    <string name="text_post">Post</string>
    <string name="text_age">Age</string>
    <string name="text_hobby">Hobby</string>
    <string name="text_email">Email</string>

    <string name="menu_friends">Friends</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Update</string>

    <string name="menu_information_app">Information</string>
    <string name="todo" />
    <string name="search">Search</string>

    <string name="name_single_Item1">Edit</string>
    <string name="name_single_Item2">Update</string>

    <string name="information_app">Simple app social network (v.1.13)</string>
    <string name="todo1">TODO</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>


    <string name="edit_text">Edit a friends</string>
    <string name="edit_button">Edit</string>
    <string name="update_text">Update</string>
    <string name="button_save_text">SAVE</string>


    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="title_activity_edit_user">Edit user</string>
    <string name="title_activity_user">User view</string>
    <string name="title_activity_add_user">Add new user</string>
    <string name="next_level">Next Level</string>
</resources>