<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_friends">

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.socialnetworkteo.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_information_app"
        android:name="com.example.socialnetworkteo.ui.friends.FriendsFragment"
        android:label="@string/action_information_app"
        tools:layout="@layout/fragment_information_app" />

    <fragment
        android:id="@+id/nav_friend2"
        android:name="com.example.socialnetworkteo.ui.friends.FriendsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_information_app1"
        android:name="com.example.socialnetworkteo.ui.friends.FriendsFragment"
        android:label="@string/menu_information_app"
        tools:layout="@layout/fragment_user_admin" />
</navigation>