<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_friends"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_friends" />

    <group
        android:id="@+id/groupNavigationAdmin"
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/edit"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_edit"
            android:onClick="editOpen"
            android:title="@string/name_single_Item1" />
        <item
            android:id="@+id/update"
            android:icon="@android:drawable/dialog_holo_dark_frame"
            android:title="@string/name_single_Item2" />
    </group>
</menu>