<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_weight="1.6"
                android:background="@drawable/image"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/userImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:civ_border_color="@color/light"
                    app:civ_border_width="3dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:onClick="editUser"
                    android:text="@string/edit_button"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/textName"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/textName"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutUserDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.4"
                android:background="@color/light"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@color/light"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userPost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_post"
                        android:textAlignment="center"
                        android:textColor="@color/dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userPostText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_post"
                        android:textAlignment="center"
                        android:textColor="@color/light_gray"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@color/light"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_age"
                        android:textAlignment="center"
                        android:textColor="@color/dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userAgeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_age"
                        android:textAlignment="center"
                        android:textColor="@color/light_gray"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_hobby"
                        android:textAlignment="center"
                        android:textColor="@color/dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_hobby"
                        android:textAlignment="center"
                        android:textColor="@color/light_gray"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutUserDown1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:background="@color/light"
                android:orientation="vertical">

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailsTextAbout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="0dp"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>